--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Animal game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint animal.js && istanbul cover animal.js < test/test.txt"
   },
   "author": "drom",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^1.5.1",
+    "istanbul": "^0.3.21"
+  }
 }
