--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "animal": "animal.js"
   },
   "scripts": {
-    "test": "eslint animal.js && istanbul cover animal.js < test/test.txt"
+    "test": "eslint animal.js && ./animal.js < test/test.txt"
   },
   "author": "drom",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^1.5.1",
-    "istanbul": "^0.3.21"
+    "eslint": "^4"
   }
 }
